2008-10-30  Robert Staudinger  <robsta@gnome.org>

	* cccss/cccss.c (cccss_paint): fix example.

	* ccss/ccss-selector-group-priv.h:
	* ccss/ccss-selector-group.c (compare), (ccss_selector_group_new),
	(ccss_selector_group_free), (ccss_selector_group_add_selector),
	(ccss_selector_group_merge), (ccss_selector_group_merge_base),
	(traverse_query), (ccss_selector_group_query),
	(ccss_selector_group_apply), (ccss_selector_group_apply_type),
	(ccss_selector_group_dump):
	* ccss/ccss-selector-group.h:
	* ccss/ccss-selector.c (match_antecessor_r), (ccss_selector_query):
	* ccss/ccss-selector.h:
	* ccss/ccss-stylesheet.c (collect_type_r), (ccss_stylesheet_query):
	* ccss/ccss-stylesheet.h:
	* ccss/ccss.sym.in:
	* doc/ccss-sections.txt:
	Fix order in which complex wildcard-based selectors are applied and streamline public API.

2008-10-29  Robert Staudinger  <robsta@gnome.org>

	* ccss/ccss-color.c (parse):
	* ccss/ccss-selector-group-priv.h:
	* ccss/ccss-selector-group.c:
	* ccss/ccss-stylesheet.c:
	* ccss/ccss-stylesheet.h:
	* ccss/ccss.sym.in:
	* doc/ccss-sections.txt:
	Get rid of gce-specifiy API.

2008-10-29  Robert Staudinger  <robsta@gnome.org>

	* ccss/ccss-parser.c (calculate_importance),
	(walk_additional_selector), (walk_simple_selector_r),
	(walk_selector_r), (start_selector_cb), (property_cb),
	(end_selector_cb), (ccss_parser_parse_file),
	(ccss_parser_parse_buffer):
	* ccss/ccss-selector.c (selector_sync),
	(ccss_universal_selector_new), (ccss_type_selector_new),
	(ccss_base_type_selector_new), (ccss_class_selector_new),
	(ccss_id_selector_new), (ccss_attribute_selector_new),
	(ccss_pseudo_class_selector_new), (ccss_selector_refine),
	(ccss_selector_append_child), (ccss_selector_append_descendant):
	* ccss/ccss-selector.h:
	Basic support for `!important' CSS properties.

2008-10-27  Robert Staudinger  <robsta@gnome.org>

	* ccss/ccss-parser.c (walk_additional_selector),
	(walk_simple_selector_r), (start_selector_cb), (end_selector_cb),