@@ -23,6 +23,7 @@
 #include <stdbool.h>
 #include <glib.h>
 #include <ccss/ccss-features.h>
+#include <ccss/ccss-node.h>
 #include <ccss/ccss-selector-group.h>
 #include <ccss/ccss-style.h>
 
