@@ -1,5 +1,15 @@
 2008-10-30  Robert Staudinger  <robsta@gnome.org>
 
+	* cccss/example-1.c (paint_css):
+	* ccss/ccss-selector-group-priv.h:
+	* ccss/ccss-selector-group.h:
+	* ccss/ccss-stylesheet.h:
+	* ccss/ccss.sym.in:
+	* doc/ccss-sections.txt:
+	Review public API with regard to selector groups.
+
+2008-10-30  Robert Staudinger  <robsta@gnome.org>
+
 	* cccss/cccss.c (cccss_paint): fix example.
 
 	* ccss/ccss-selector-group-priv.h:
